art up on village site

--- a/thevillage-2024/index.html
+++ b/thevillage-2024/index.html
@@ -113,6 +113,27 @@
         <p>these are sorted roughly from least to most academic. they're all pretty academic, lol.</p>
     </div>
 
+    
+    <div class="caption" style="margin-bottom: 15px;">
+        <h2>collage of the man and the mushroom forest</h2>
+        <p>a couple drunk nights in september, 2023: a man and a mushroom forest, met with the violence of a blade and scrapped back together.</p>
+    </div>
+    <div class="detail-images" style="--n: 1;">
+        <img src="/thevillage-2024/mushroom_thing.png" alt="mushroom thing">
+    </div>
+
+    <div class="caption" style="margin-bottom: 15px;">
+        <h2>back home</h2>
+        <p>march 18th-23rd, i.e. spring break, 2024: 40 some-odd hours back home with myself and my pens. what a nice thing it is to have *time.*</p>
+    </div>
+    <div class="detail-images" style="--n: 3;">
+        <img src="/thevillage-2024/back_home1.png" alt="detail 1">
+        <img src="/thevillage-2024/back_home2.png" alt="detail 2">
+        <img src="/thevillage-2024/back_home3.png" alt="detail 3">
+    </div>
+    <div class="detail-images" style="--n: 1;">
+        <img src="/thevillage-2024/back_home.png" alt="detail 1">
+    </div>
 
     <div class="caption" style="margin-bottom: 15px;">
         <h2>these diasporic feet</h2>
@@ -145,7 +166,7 @@
         <img src="/thevillage-2024/diasporic_feet4.jpg" alt="asian overdrive">
     </div>
     <div class="detail-images" style="--n: 1;">
-        <img src="/thevillage-2024/diasporic_feet5.jpg" alt="work">
+        <img src="/thevillage-2024/diasporic_feet5.jpg" alt="memories">
     </div>
     <div class="detail-images" style="--n: 2; margin-bottom: 20px;">
         <img src="/thevillage-2024/diasporic_feet6.png" alt="expressive feet">
