--- a/weeksville-2024/index.html
+++ b/weeksville-2024/index.html
@@ -130,5 +130,14 @@
     <div class="video-embed">
         <iframe width="720" height="405" src="https://www.youtube.com/embed/E17Wp6EmXGY" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     </div>
+
+    <div class="caption" style="margin-bottom: 15px;">
+        <h2>a first fish!</h2>
+        <p>quick little practice drawing the biological, couldn't help but throw in some asemic writing.</p>
+    </div>
+
+    <div class="detail-images" style="--n: 1;">
+        <img src="/weeksville-2024/thunnus_thynuss.png" alt="memories">
+    </div>
 </body>
 </html>
