--- a/weeksville-2024/index.html
+++ b/weeksville-2024/index.html
@@ -133,7 +133,7 @@
 
     <div class="caption" style="margin-bottom: 5px;">
         <h2>a first fish!</h2>
-        <p>quick little practice drawing the biological, couldn't help but throw in some asemic writing.</p>
+        <p>june 6 & 7: quick little practice drawing the biological, couldn't help but throw in some asemic writing. drew this one out on the stoop chillin with chase & my new neighbors.</p>
     </div>
 
     <div class="detail-images" style="--n: 1;">
