--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
 </head>
 <body>
     <div class="container">
-        <img src="images/eclipse.JPG" alt="kovid looking at the eclipse">
+        <img src="images/river o no return chillin.JPG" alt="chillin">
         <div class="overlay-text">
             <h1>KOVID PAL ODOUARD!</h1>
             <p>now has a website!</p>
@@ -209,10 +209,10 @@
             an archive to store / a place to share the things i create. to hell with corporation-constructed, algorithmically-arranged digital spaces! this digital space was made by a human who doesn't know how to code (with the help of chat gpt, lol). the principles are consistent, i swear! if anything on this website doesn't work, it's just camp bro <3
         </div>
         <div class="imagecaption">
-            Image: Accidental mewing session @ wash during the eclipse. Taken by QUINN KAMMER
+            Image: the frank church river of no return in all its glory
         </div>
         <div class="lil-message-text">
-            welcome to the family, brother!
+            high in the uintas, my dear people :)
         </div>
     </div>
     <div class="link-container">
