--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
             position: absolute;
             right: 0.5%; /* Adjust this value for horizontal positioning */
             bottom: 9%; /* Adjust this value for vertical positioning */
-            color: #79e896;
+            color: #b5e9f5;
             text-align: center;
             font-family: 'Pixelon', sans-serif;
             font-size: 12px;
