--- a/weeksville-2024/index.html
+++ b/weeksville-2024/index.html
@@ -136,8 +136,17 @@
         <p>june 6 & 7: quick little practice drawing the biological, couldn't help but throw in some asemic writing. drew this one out on the stoop chillin with chase & my new neighbors.</p>
     </div>
 
-    <div class="detail-images" style="--n: 1;">
+    <div class="detail-images" style="--n: 1; margin-bottom: 10px;">
         <img src="/weeksville-2024/thunnus_thynuss.png" alt="memories">
+    </div>
+
+    <div class="caption" style="margin-bottom: 5px;">
+        <h2>a first fish!</h2>
+        <p>july 28: the anatomy of an ancient beast and its ancient jaws, swimming into a mass of nonsense that gestures at sense. #1 of a series of drawings with hyostilic jaws.</p>
+    </div>
+
+    <div class="detail-images" style="--n: 1; margin-bottom: 10px;">
+        <img src="/weeksville-2024/shark_into_nonmeaning.png" alt="memories">
     </div>
 </body>
 </html>
