--- a/weeksville-2024/index.html
+++ b/weeksville-2024/index.html
@@ -141,7 +141,7 @@
     </div>
 
     <div class="caption" style="margin-bottom: 5px;">
-        <h2>a first fish!</h2>
+        <h2>an old, mighty fish</h2>
         <p>july 26: the anatomy of an ancient beast and its ancient jaws, swimming into a mass of nonsense that gestures at sense. #1 of a series of drawings with hyostilic jaws.</p>
     </div>
 
