--- a/weeksville-2024/index.html
+++ b/weeksville-2024/index.html
@@ -137,7 +137,7 @@
     </div>
 
     <div class="detail-images" style="--n: 1; margin-bottom: 10px;">
-        <img src="/weeksville-2024/thunnus_thynuss.png" alt="memories">
+        <img src="/weeksville-2024/thunnus_thynuss.png" alt="TUNA">
     </div>
 
     <div class="caption" style="margin-bottom: 5px;">
@@ -146,7 +146,7 @@
     </div>
 
     <div class="detail-images" style="--n: 1; margin-bottom: 10px;">
-        <img src="/weeksville-2024/shark_into_nonmeaning.png" alt="memories">
+        <img src="/weeksville-2024/shark_into_nonmeaning.png" alt="SHARK">
     </div>
 </body>
 </html>
