--- a/weeksville-2024/index.html
+++ b/weeksville-2024/index.html
@@ -148,5 +148,14 @@
     <div class="detail-images" style="--n: 1; margin-bottom: 10px;">
         <img src="/weeksville-2024/shark_into_nonmeaning.jpg" alt="SHARK">
     </div>
+
+    <div class="caption" style="margin-bottom: 5px;">
+        <h2>a fish that predates your smile</h2>
+        <p>july 29-august 7: the anatomy of another ancient fish, and some kovid-lines. #2 of a series of drawings with hyostilic jaws. </p>
+    </div>
+
+    <div class="detail-images" style="--n: 1; margin-bottom: 10px;">
+        <img src="/weeksville-2024/i_predate_your_smile.jpg" alt="SKATE">
+    </div>
 </body>
 </html>
