--- a/weeksville-2024/index.html
+++ b/weeksville-2024/index.html
@@ -155,7 +155,7 @@
     </div>
 
     <div class="detail-images" style="--n: 1; margin-bottom: 10px;">
-        <img src="/weeksville-2024/i_predate_your_smile.jpg" alt="SKATE">
+        <img src="/weeksville-2024/i_predate_your_smile.png" alt="SKATE">
     </div>
 </body>
 </html>
