lil message update

--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@
             Image: the frank church river of no return in all its glory
         </div>
         <div class="lil-message-text">
-            high in the uintas, my dear people :)
+            i'm moving to inwood!
         </div>
     </div>
     <div class="link-container">
