--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
 </head>
 <body>
     <div class="container">
-        <img src="images/river o no return chillin.JPG" alt="chillin">
+        <img src="images/aloo bhujia.JPG" alt="chillin">
         <div class="overlay-text">
             <h1>KOVID PAL ODOUARD!</h1>
             <p>now has a website!</p>
@@ -209,7 +209,7 @@
             an archive to store / a place to share the things i create. to hell with corporation-constructed, algorithmically-arranged digital spaces! this digital space was made by a human who doesn't know how to code (with the help of chat gpt, lol). the principles are consistent, i swear! if anything on this website doesn't work, it's just camp bro <3
         </div>
         <div class="imagecaption">
-            Image: the frank church river of no return in all its glory
+            Image: HALDIRAM'S PLEASE SPONSOR ME!
         </div>
         <div class="lil-message-text">
             i'm moving to inwood!
