--- a/index.html
+++ b/index.html
@@ -78,8 +78,8 @@
         .lil-message-text {
             position: absolute;
             right: 0.5%; /* Adjust this value for horizontal positioning */
-            bottom: 9%; /* Adjust this value for vertical positioning */
-            color: #b5e9f5;
+            bottom: 6%; /* Adjust this value for vertical positioning */
+            color: #20d862;
             text-align: center;
             font-family: 'Pixelon', sans-serif;
             font-size: 12px;
