--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
             position: absolute;
             right: 0.5%; /* Adjust this value for horizontal positioning */
             bottom: 6%; /* Adjust this value for vertical positioning */
-            color: #20d862;
+            color: #fae828;
             text-align: center;
             font-family: 'Pixelon', sans-serif;
             font-size: 12px;
