fuck your hands
 + added media used for each piece

--- a/weeksville-2024/index.html
+++ b/weeksville-2024/index.html
@@ -131,31 +131,48 @@
         <iframe width="720" height="405" src="https://www.youtube.com/embed/E17Wp6EmXGY" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     </div>
 
+
+
+
     <div class="caption" style="margin-bottom: 5px;">
         <h2>a first fish!</h2>
-        <p>june 6 & 7: quick little practice drawing the biological, couldn't help but throw in some asemic writing. drew this one out on the stoop chillin with chase & my new neighbors.</p>
+        <p>june 6 & 7: quick little practice drawing the biological, couldn't help but throw in some asemic writing. drew this one out on the stoop chillin with chase & my new neighbors. (it's a tuna.) micron, micron, and micron.</p>
     </div>
 
     <div class="detail-images" style="--n: 1; margin-bottom: 10px;">
         <img src="/weeksville-2024/thunnus_thynuss.jpg" alt="TUNA">
     </div>
 
+
+
     <div class="caption" style="margin-bottom: 5px;">
         <h2>an old, mighty fish</h2>
-        <p>july 26: the anatomy of an ancient beast and its ancient jaws, swimming into a mass of nonsense that gestures at sense. #1 of a series of drawings with hyostilic jaws.</p>
+        <p>july 26: the anatomy of an ancient beast and its ancient jaws, swimming into a mass of nonsense that gestures at sense. #1 of a series of drawings with hyostilic jaws. (it's some kinda shark idk.) more micron. </p>
     </div>
 
     <div class="detail-images" style="--n: 1; margin-bottom: 10px;">
         <img src="/weeksville-2024/shark_into_nonmeaning.jpg" alt="SHARK">
     </div>
 
+
+
     <div class="caption" style="margin-bottom: 5px;">
         <h2>a fish that predates your smile</h2>
-        <p>july 29-august 7: the anatomy of another ancient fish, and some kovid-lines. #2 of a series of drawings with hyostilic jaws. </p>
+        <p>july 29-august 7, august 12: the anatomy of another ancient fish, and some kovid-lines. #2 of a series of drawings with hyostilic jaws. (it's a barndoor skate.) micron, calligraphy pen, dip pen, paint marker, spilt ink & water. </p>
     </div>
 
     <div class="detail-images" style="--n: 1; margin-bottom: 10px;">
         <img src="/weeksville-2024/i_predate_your_smile.png" alt="SKATE">
+    </div>
+
+
+
+    <div class="caption" style="margin-bottom: 5px;">
+        <h2>a fish that doesn't gaf abt your hands</h2>
+        <p>august 17: it just doesn't gaf. maybe in one timeline someone will make an album where you mosh to this motherfucker. #3 of a series of drawings with hyostilic jaws. (it's a hammerhead shark.) watercolor, iridiscent ink, and water; micron & dip pen.</p>
+    </div>
+    <div class="detail-images" style="--n: 1; margin-bottom: 10px;">
+        <img src="/weeksville-2024/fuck_your_hands.png" alt="HAMMERHEAD">
     </div>
 </body>
 </html>
