--- a/weeksville-2024/index.html
+++ b/weeksville-2024/index.html
@@ -174,5 +174,14 @@
     <div class="detail-images" style="--n: 1; margin-bottom: 10px;">
         <img src="/weeksville-2024/fuck_your_hands.png" alt="HAMMERHEAD">
     </div>
+
+
+    <div class="caption" style="margin-bottom: 5px;">
+        <h2>a fish on tenderness</h2>
+        <p>august 18,21: it is nurtured by fewer things than us. hyostilic jaws #4. (it's an eagle ray). watercolor, micron, dip pen. </p>
+    </div>
+    <div class="detail-images" style="--n: 1; margin-bottom: 10px;">
+        <img src="/weeksville-2024/on_tenderness.png" alt="EAGLE RAY">
+    </div>
 </body>
 </html>
