--- a/weeksville-2024/index.html
+++ b/weeksville-2024/index.html
@@ -183,5 +183,15 @@
     <div class="detail-images" style="--n: 1; margin-bottom: 10px;">
         <img src="/weeksville-2024/on_tenderness.png" alt="EAGLE RAY">
     </div>
+
+
+    <div class="caption" style="margin-bottom: 15px;">
+        <h2>from fish to postcoloniality: archive 2. FISH UPDATE. there is no fish curriculum</h2>
+        <p>reflections right before i leave weeksville / start the semester!! <a href="https://www.youtube.com/watch?v=7ekbLMBYjog" class="link-element">LINK</a></p>
+    </div>
+
+    <div class="video-embed">
+        <iframe width="720" height="405" src="https://www.youtube.com/embed/7ekbLMBYjog?si=JmgXz_JrwOJOaQP2" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    </div>
 </body>
 </html>
