--- a/weeksville-2024/index.html
+++ b/weeksville-2024/index.html
@@ -114,7 +114,7 @@
 </head>
 <body>
     <div class="heading-text">
-        <h1>A NEW THING (in weeksville, NY, 2024)</h1>
+        <h1>it begins! from fish to postcoloniality</h1>
         <p>by <a href="https://kovid-pal-odouard.github.io" class="link-element">Kovid Pal Odouard</a>!</p>
     </div>
 
@@ -177,11 +177,11 @@
 
 
     <div class="caption" style="margin-bottom: 5px;">
-        <h2>a fish on tenderness</h2>
-        <p>august 18,21: it is nurtured by fewer things than us. hyostilic jaws #4. (it's an eagle ray). watercolor, micron, dip pen. </p>
+        <h2>a fish that needs no myth</h2>
+        <p>august 30, september 15: this fish is reflective of the fact that i am reading nietzsche in class 0_0 . maybe in one timeline someone will make a really fuzzy-sounding shoegaze or dreampop to this motherfucker. #4(ish) of a series of drawing with hyostilic jaws. (it's a mako).  watercolor, then micron, then micron again.</p>
     </div>
     <div class="detail-images" style="--n: 1; margin-bottom: 20px;">
-        <img src="/weeksville-2024/on_tenderness.png" alt="EAGLE RAY">
+        <img src="/weeksville-2024/i_need_no_myth.png" alt="MAKO">
     </div>
 
 
