--- a/index.html
+++ b/index.html
@@ -209,10 +209,10 @@
             an archive to store / a place to share the things i create. to hell with corporation-constructed, algorithmically-arranged digital spaces! this digital space was made by a human who doesn't know how to code (with the help of chat gpt, lol). the principles are consistent, i swear! if anything on this website doesn't work, it's just camp bro <3
         </div>
         <div class="imagecaption">
-            Image: HALDIRAM'S PLEASE SPONSOR ME!
+            Image: a dornishman and his sister pull up to the wedding
         </div>
         <div class="lil-message-text">
-            i'm moving to inwood!
+            glory to the crickets!!
         </div>
     </div>
     <div class="link-container">
@@ -227,7 +227,7 @@
     </div>
     <div class="link3-container" style="margin-top:10px">
         <a href="https://kovid-pal-odouard.github.io/weeksville-2024/" class="link3-element" target="_blank">
-            something new!!!
+            FROM FISH TO POSTCOLONIALITY
         </a>
     </div>
 </body>
