front page image fix, Δ alt text on all pages

--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
 </head>
 <body>
     <div class="container">
-        <img src="images/aloo bhujia.JPG" alt="chillin">
+        <img src="images/dornish wedding.jpg" alt="image loading: the dornish wedding">
         <div class="overlay-text">
             <h1>KOVID PAL ODOUARD!</h1>
             <p>now has a website!</p>
