--- a/thevillage-2024/index.html
+++ b/thevillage-2024/index.html
@@ -113,13 +113,13 @@
         <p>these are sorted roughly from least to most academic. they're all pretty academic, lol.</p>
     </div>
 
-    
+
     <div class="caption" style="margin-bottom: 15px;">
         <h2>collage of the man and the mushroom forest</h2>
         <p>a couple drunk nights in september, 2023: a man and a mushroom forest, met with the violence of a blade and scrapped back together.</p>
     </div>
     <div class="detail-images" style="--n: 1;">
-        <img src="/thevillage-2024/mushroom_thing.png" alt="mushroom thing">
+        <img src="/thevillage-2024/mushroom_thing.png" alt="image loading: mushroom thing">
     </div>
 
     <div class="caption" style="margin-bottom: 15px;">
@@ -127,12 +127,12 @@
         <p>march 18th-23rd, i.e. spring break, 2024: 40 some-odd hours back home with myself and my pens. what a nice thing it is to have *time.*</p>
     </div>
     <div class="detail-images" style="--n: 3;">
-        <img src="/thevillage-2024/back_home1.png" alt="detail 1">
-        <img src="/thevillage-2024/back_home2.png" alt="detail 2">
-        <img src="/thevillage-2024/back_home3.png" alt="detail 3">
+        <img src="/thevillage-2024/back_home1.png" alt="image loading: detail 1">
+        <img src="/thevillage-2024/back_home2.png" alt="image loading: detail 2">
+        <img src="/thevillage-2024/back_home3.png" alt="image loading: detail 3">
     </div>
     <div class="detail-images" style="--n: 1;">
-        <img src="/thevillage-2024/back_home.png" alt="detail 1">
+        <img src="/thevillage-2024/back_home.png" alt="image loading: detail 1">
     </div>
 
     <div class="caption" style="margin-bottom: 15px;">
@@ -158,19 +158,19 @@
         <p>so, i created these mid poems where i imagine my feet to have their own consciousness and feel their way through diasporic life, then write from their perspective. shoutout to sukhdev sandhu for taking me there, he's a cool guy.</p>
     </div>
     <div class="detail-images" style="--n: 2;">
-        <img src="/thevillage-2024/diasporic_feet1.png" alt="intro">
-        <img src="/thevillage-2024/diasporic_feet2.jpg" alt="intro ctd">
+        <img src="/thevillage-2024/diasporic_feet1.png" alt="image loading: intro">
+        <img src="/thevillage-2024/diasporic_feet2.jpg" alt="image loading: intro ctd">
     </div>
     <div class="detail-images" style="--n: 2;">
-        <img src="/thevillage-2024/diasporic_feet3.jpg" alt="work">
-        <img src="/thevillage-2024/diasporic_feet4.jpg" alt="asian overdrive">
+        <img src="/thevillage-2024/diasporic_feet3.jpg" alt="image loading: work">
+        <img src="/thevillage-2024/diasporic_feet4.jpg" alt="image loading: asian overdrive">
     </div>
     <div class="detail-images" style="--n: 1;">
-        <img src="/thevillage-2024/diasporic_feet5.jpg" alt="memories">
+        <img src="/thevillage-2024/diasporic_feet5.jpg" alt="image loading: memories">
     </div>
     <div class="detail-images" style="--n: 2; margin-bottom: 20px;">
-        <img src="/thevillage-2024/diasporic_feet6.png" alt="expressive feet">
-        <img src="/thevillage-2024/diasporic_feet7.jpg" alt="feelin good">
+        <img src="/thevillage-2024/diasporic_feet6.png" alt="image loading: expressive feet">
+        <img src="/thevillage-2024/diasporic_feet7.jpg" alt="image loading: feelin good">
     </div>
 
 
@@ -182,7 +182,7 @@
         <p>huge shoutout to ben for having an assignment like this, allowing us to use the formulations and ways of thinking his course provided for creative ends was powerful thing. great prof. here's an exposé on the project -- it kind of bites into some pretty dense academic meat straight off the bat because it was written for a class that had been using the ideas in those materials for a sec, so keep that in mind: <a href="https://kovid-pal-odouard.github.io/thevillage-2024/melted_contours" class="link-element" target="_blank">LINK.</a> good memories with jay and spencer!</p>
     </div>
     <div class="detail-images" style="--n: 1; margin-bottom: 20px;">
-        <img src="/thevillage-2024/when_the_contours_melted.png" alt="when the contours melted">
+        <img src="/thevillage-2024/when_the_contours_melted.png" alt="image loading: when the contours melted">
     </div>
 
 
