--- a/weeksville-2024/index.html
+++ b/weeksville-2024/index.html
@@ -140,7 +140,7 @@
     </div>
 
     <div class="detail-images" style="--n: 1; margin-bottom: 20px;">
-        <img src="/weeksville-2024/thunnus_thynuss.jpg" alt="TUNA">
+        <img src="/weeksville-2024/thunnus_thynuss.jpg" alt="image loading: TUNA">
     </div>
 
 
@@ -151,7 +151,7 @@
     </div>
 
     <div class="detail-images" style="--n: 1; margin-bottom: 20px;">
-        <img src="/weeksville-2024/shark_into_nonmeaning.jpg" alt="SHARK">
+        <img src="/weeksville-2024/shark_into_nonmeaning.jpg" alt="image loading: SHARK">
     </div>
 
 
@@ -162,7 +162,7 @@
     </div>
 
     <div class="detail-images" style="--n: 1; margin-bottom: 120px;">
-        <img src="/weeksville-2024/i_predate_your_smile.png" alt="SKATE">
+        <img src="/weeksville-2024/i_predate_your_smile.png" alt="image loading: SKATE">
     </div>
 
 
@@ -172,7 +172,7 @@
         <p>august 17: it just doesn't gaf. maybe in one timeline someone will make an album where you mosh to this motherfucker. #3 of a series of drawings with hyostilic jaws. (it's a hammerhead shark.) watercolor, iridiscent ink, and water; micron & dip pen.</p>
     </div>
     <div class="detail-images" style="--n: 1; margin-bottom: 20px;">
-        <img src="/weeksville-2024/fuck_your_hands.png" alt="HAMMERHEAD">
+        <img src="/weeksville-2024/fuck_your_hands.png" alt="image loading: HAMMERHEAD">
     </div>
 
 
@@ -181,7 +181,7 @@
         <p>august 30, september 15: this fish is reflective of the fact that i am reading nietzsche in class 0_0 . maybe in one timeline someone will make a really fuzzy-sounding shoegaze or dreampop to this motherfucker. #4(ish) of a series of drawing with hyostilic jaws. (it's a mako).  watercolor, then micron, then micron again.</p>
     </div>
     <div class="detail-images" style="--n: 1; margin-bottom: 20px;">
-        <img src="/weeksville-2024/i_need_no_myth.png" alt="MAKO">
+        <img src="/weeksville-2024/i_need_no_myth.png" alt="image loading: MAKO">
     </div>
 
 
