--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@
     </div>
     <div class="link3-container" style="margin-top:10px">
         <a href="https://kovid-pal-odouard.github.io/weeksville-2024/" class="link3-element" target="_blank">
-            FROM FISH TO POSTCOLONIALITY
+            FROM FISH TO POSTCOLONIALITY.
         </a>
     </div>
 </body>
