--- a/index.html
+++ b/index.html
@@ -66,6 +66,8 @@
             line-height: 20px;
             max-width: 25%; /* Limit of how far it goes before wrapping */
             text-shadow: 2px 2px #bd7306; /* Apply text shadow with desired color */
+            background-color: #133523; /* Highlight */
+            padding: 5px; /* Add padding to make the highlight visible */
         }
         .imagecaption {
             position: absolute;
@@ -74,12 +76,14 @@
             color: #ffffff;
             font-family: 'Pixelon', sans-serif;
             font-size: 14px;
+            background-color: #a7c26d; /* Highlight */
+            padding: 5px; /* Add padding to make the highlight visible */
         }
         .lil-message-text {
             position: absolute;
             right: 0.5%; /* Adjust this value for horizontal positioning */
             bottom: 6%; /* Adjust this value for vertical positioning */
-            color: #fae828;
+            color: #fcb5a2;
             text-align: center;
             font-family: 'Pixelon', sans-serif;
             font-size: 12px;
@@ -147,7 +151,6 @@
             height: 100%; /* Adjust height to cover full element */
             z-index: -1;
             box-shadow: 3px 3px #D5A454;
-        }
         }
         .link3-container {
             margin-top: 10px; /* Margin to position the link slightly below the image */
