--- a/weeksville-2024/index.html
+++ b/weeksville-2024/index.html
@@ -114,7 +114,7 @@
 </head>
 <body>
     <div class="heading-text">
-        <h1>it begins! from fish to postcoloniality</h1>
+        <h1>IT BEGINS! FROM FISH TO POSTCOLONIALITY</h1>
         <p>by <a href="https://kovid-pal-odouard.github.io" class="link-element">Kovid Pal Odouard</a>!</p>
     </div>
 
@@ -178,7 +178,7 @@
 
     <div class="caption" style="margin-bottom: 5px;">
         <h2>a fish that needs no myth</h2>
-        <p>august 30, september 15: this fish is reflective of the fact that i am reading nietzsche in class 0_0 . maybe in one timeline someone will make a really fuzzy-sounding shoegaze or dreampop to this motherfucker. #4(ish) of a series of drawing with hyostilic jaws. (it's a mako).  watercolor, then micron, then micron again.</p>
+        <p>august 30, september 15: this fish is reflective of the fact that i am reading nietzsche in class 0_0 . maybe in one timeline someone will make a really fuzzy-sounding shoegaze or dreampop album where you chill to this motherfucker. #4(ish) of a series of drawing with hyostilic jaws. (it's a mako). with kammer out on the balcony in washington heights! watercolor, then micron, then micron again.</p>
     </div>
     <div class="detail-images" style="--n: 1; margin-bottom: 20px;">
         <img src="/weeksville-2024/i_need_no_myth.png" alt="image loading: MAKO">
@@ -192,6 +192,15 @@
 
     <div class="video-embed">
         <iframe width="720" height="405" src="https://www.youtube.com/embed/7ekbLMBYjog?si=JmgXz_JrwOJOaQP2" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    </div>
+
+
+    <div class="caption" style="margin-bottom: 5px;">
+        <h2>a fish that has found rest</h2>
+        <p>october 12, 18: this fish can rest after a lifetime of motion. like me today!!!! after spending all this time with the form of the shark, which is so mighty, alien, angular and unfeeling,,, i needed some more supple forms. it was nice to return to the humanoid, i missed looking at my work and seeing eyes that might see like my own. "ghosts in amber... semblances of life in amber." micron then watercolor, again and again. </p>
+    </div>
+    <div class="detail-images" style="--n: 1; margin-bottom: 20px;">
+        <img src="/weeksville-2024/still_at_last.png" alt="image loading: MAKO">
     </div>
 </body>
 </html>
