--- a/weeksville-2024/index.html
+++ b/weeksville-2024/index.html
@@ -197,7 +197,7 @@
 
     <div class="caption" style="margin-bottom: 5px;">
         <h2>a fish that has found rest</h2>
-        <p>october 12, 18: this fish can rest after a lifetime of motion. like me today!!!! after spending all this time with the form of the shark, which is so mighty, alien, angular and unfeeling,,, i needed some more supple forms. it was nice to return to the humanoid, i missed looking at my work and seeing eyes that might see like my own. "ghosts in amber... semblances of life in amber." micron then watercolor, again and again. </p>
+        <p>october 12, 18: this fish can rest after a lifetime of motion. like me today!!!! #5(ish) of a series of drawings with hyostilic jaws. after spending all this time with the form of the shark, which is so mighty, alien, angular and unfeeling,,, i needed some more supple forms. it was nice to return to the humanoid, i missed looking at my work and seeing eyes that might see like my own. "ghosts in amber... semblances of life in amber." micron then watercolor, again and again. </p>
     </div>
     <div class="detail-images" style="--n: 1; margin-bottom: 20px;">
         <img src="/weeksville-2024/still_at_last.png" alt="image loading: MAKO">
