comma in making sense

--- a/thevillage-2024/making_sense/index.html
+++ b/thevillage-2024/making_sense/index.html
@@ -168,7 +168,7 @@
 
     <div class="essay">
         <p class="indent">
-            One night towards the end of her five year stay in Washington, D.C., Rosario Ferré, the late Puerto Rican novelist and translator had a dream in which the Chesapeake and Ohio Canal separated D.C. from a “bright green, African-daisy covered turf [that] suspiciously resembled the Puerto Rican countryside” (80). She had often crossed without a problem, but this time, “As I began to cross the canal”, looking to get back to the Puerto Rican side for good:
+            One night towards the end of her five year stay in Washington, D.C., Rosario Ferré, the late Puerto Rican novelist and translator, had a dream in which the Chesapeake and Ohio Canal separated D.C. from a “bright green, African-daisy covered turf [that] suspiciously resembled the Puerto Rican countryside” (80). She had often crossed without a problem, but this time, “As I began to cross the canal”, looking to get back to the Puerto Rican side for good:
           </p>
         <p class="blockquote">
             …a swell of water began to travel down the canal, lifting me off my feet and down current, so that it became impossible to reach either of the two shores. At first I struggled this way and that, as panic welled up at me and I tried unsuccessfully to grab onto the vegetation which grew on the banks, but I soon realized the current was much too powerful…After a while, as I floated face up like Ophelia over the green surface of the water, I began to feel strangely at ease and tranquil. I looked at the world as it slid by…and wondered at the double exposure on both shores…perfectly fitted to each other and reflected on the canal’s surface like on a traveling mirror on which I was magically being sustained. (Ferré, 80-81)
