--- a/weeksville-2024/index.html
+++ b/weeksville-2024/index.html
@@ -136,7 +136,7 @@
 
     <div class="caption" style="margin-bottom: 5px;">
         <h2>a first fish!</h2>
-        <p>june 6 & 7: quick little practice drawing the biological, couldn't help but throw in some asemic writing. drew this one out on the stoop chillin with chase & my new neighbors. (it's a tuna.) micron, micron, and micron.</p>
+        <p>june 6 & 7, 2024: quick little practice drawing the biological, couldn't help but throw in some asemic writing. drew this one out on the stoop chillin with chase & my new neighbors. (it's a tuna.) micron, micron, and micron.</p>
     </div>
 
     <div class="detail-images" style="--n: 1; margin-bottom: 20px;">
@@ -147,7 +147,7 @@
 
     <div class="caption" style="margin-bottom: 5px;">
         <h2>shark into nonmeaning</h2>
-        <p>july 26: the anatomy of an ancient beast and its ancient jaws, swimming into a mass of nonsense that gestures at sense. #1 of a series of drawings with hyostilic jaws. (it's some kinda shark idk.) more micron. </p>
+        <p>july 26, 2024: the anatomy of an ancient beast and its ancient jaws, swimming into a mass of nonsense that gestures at sense. #1 of a series of drawings with hyostilic jaws. (it's some kinda shark idk.) more micron. </p>
     </div>
 
     <div class="detail-images" style="--n: 1; margin-bottom: 20px;">
@@ -158,7 +158,7 @@
 
     <div class="caption" style="margin-bottom: 5px;">
         <h2>a fish that predates your smile</h2>
-        <p>july 29-august 7, august 12: the anatomy of another ancient fish, and some kovid-lines. #2 of a series of drawings with hyostilic jaws. (it's a barndoor skate.) micron, calligraphy pen, dip pen, paint marker, spilt ink & water. </p>
+        <p>july 29-august 7, august 12, 2024: the anatomy of another ancient fish, and some kovid-lines. #2 of a series of drawings with hyostilic jaws. (it's a barndoor skate.) micron, calligraphy pen, dip pen, paint marker, spilt ink & water. </p>
     </div>
 
     <div class="detail-images" style="--n: 1; margin-bottom: 120px;">
@@ -169,7 +169,7 @@
 
     <div class="caption" style="margin-bottom: 5px;">
         <h2>a fish that doesn't gaf abt your hands</h2>
-        <p>august 17: it just doesn't gaf. maybe in one timeline someone will make an album where you mosh to this motherfucker. #3 of a series of drawings with hyostilic jaws. (it's a hammerhead shark.) watercolor, iridiscent ink, and water; micron & dip pen.</p>
+        <p>august 17, 2024: it just doesn't gaf. maybe in one timeline someone will make an album where you mosh to this motherfucker. #3 of a series of drawings with hyostilic jaws. (it's a hammerhead shark.) watercolor, iridiscent ink, and water; micron & dip pen.</p>
     </div>
     <div class="detail-images" style="--n: 1; margin-bottom: 20px;">
         <img src="/weeksville-2024/fuck_your_hands.png" alt="image loading: HAMMERHEAD">
@@ -178,7 +178,7 @@
 
     <div class="caption" style="margin-bottom: 5px;">
         <h2>a fish that needs no myth</h2>
-        <p>august 30, september 15: this fish is reflective of the fact that i am reading nietzsche in class 0_0 . maybe in one timeline someone will make a really fuzzy-sounding shoegaze or dreampop album where you chill to this motherfucker. #4(ish) of a series of drawing with hyostilic jaws. (it's a mako). with kammer out on the balcony in washington heights! watercolor, then micron, then micron again.</p>
+        <p>august 30, september 15, 2024: this fish is reflective of the fact that i am reading nietzsche in class 0_0 . maybe in one timeline someone will make a really fuzzy-sounding shoegaze or dreampop album where you chill to this motherfucker. #4(ish) of a series of drawing with hyostilic jaws. (it's a mako). with kammer out on the balcony in washington heights! watercolor, then micron, then micron again.</p>
     </div>
     <div class="detail-images" style="--n: 1; margin-bottom: 20px;">
         <img src="/weeksville-2024/i_need_no_myth.png" alt="image loading: MAKO">
@@ -197,10 +197,24 @@
 
     <div class="caption" style="margin-bottom: 5px;">
         <h2>a fish that has found rest</h2>
-        <p>october 12, 18: this fish can rest after a lifetime of motion. like me today!!!! #5(ish) of a series of drawings with hyostilic jaws. after spending all this time with the form of the shark, which is so mighty, alien, angular and unfeeling,,, i needed some more supple forms. it was nice to return to the humanoid, i missed looking at my work and seeing eyes that might see like my own. "ghosts in amber... semblances of life in amber." micron then watercolor, again and again. </p>
+        <p>october 12, 18, 2024: this fish can rest after a lifetime of motion. like me today!!!! #5(ish) of a series of drawings with hyostilic jaws. after spending all this time with the form of the shark, which is so mighty, alien, angular and unfeeling,,, i needed some more supple forms. it was nice to return to the humanoid, i missed looking at my work and seeing eyes that might see like my own. "ghosts in amber... semblances of life in amber." micron then watercolor, again and again. </p>
     </div>
     <div class="detail-images" style="--n: 1; margin-bottom: 20px;">
-        <img src="/weeksville-2024/still_at_last.png" alt="image loading: MAKO">
+        <img src="/weeksville-2024/still_at_last.png" alt="image loading: SHARK">
+    </div>
+
+    <div class="caption" style="margin-bottom: 5px;">
+        <h2>some doodles!</h2>
+        <p>november-decembber 2024: some doodles, in collaboration with maaikhaaa! the day we started this was a wonderful day. invented characters + occasional skulls of hyostilic-jawed fish.</p>
+    </div>/
+    <div class="detail-images" style="--n: 1; margin-bottom: 20px;">
+        <img src="doodle1_whole.png" alt="image loading: DOODLE">
+    </div>
+    <div class="detail-images" style="--n: 4; margin-bottom: 20px;">
+        <img src="doodle1_detail1.png" alt="image loading: DOODLE">
+        <img src="doodle1_detail2.png" alt="image loading: DOODLE">
+        <img src="doodle1_detail3.png" alt="image loading: DOODLE">
+        <img src="doodle1_detail4.png" alt="image loading: DOODLE">
     </div>
 </body>
 </html>
