--- a/weeksville-2024/index.html
+++ b/weeksville-2024/index.html
@@ -210,11 +210,14 @@
     <div class="detail-images" style="--n: 1; margin-bottom: 20px;">
         <img src="doodle1_whole.png" alt="image loading: DOODLE">
     </div>
-    <div class="detail-images" style="--n: 4; margin-bottom: 20px;">
+    <div class="detail-images" style="--n: 2; margin-bottom: 20px;">
         <img src="doodle1_detail1.png" alt="image loading: DOODLE">
         <img src="doodle1_detail2.png" alt="image loading: DOODLE">
-        <img src="doodle1_detail3.png" alt="image loading: DOODLE">
-        <img src="doodle1_detail4.png" alt="image loading: DOODLE">
     </div>
+    <div class="detail-images" style="--n: 2; margin-bottom: 20px;">
+      <img src="doodle1_detail3.png" alt="image loading: DOODLE">
+      <img src="doodle1_detail4.png" alt="image loading: DOODLE">
+    </div>
+
 </body>
 </html>
