--- a/weeksville-2024/index.html
+++ b/weeksville-2024/index.html
@@ -211,7 +211,7 @@
         <img src="doodle1_whole.png" alt="image loading: DOODLE">
     </div>
     <div class="detail-images" style="--n: 2; margin-bottom: 20px;">
-        <img src="doodle1_detail1.jpg" alt="image loading: DOODLE">
+        <img src="doodle1_detail1.png" alt="image loading: DOODLE">
         <img src="doodle1_detail2.png" alt="image loading: DOODLE">
     </div>
     <div class="detail-images" style="--n: 2; margin-bottom: 20px;">
